--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
     "psr-4": { "App\\": "src/" }
   },
   "require": {
+    "php": ">=8.1",
     "symfony/console": "^6.0",
     "symfony/yaml": "^6.3"
   }
